src/main/java/lexical/test/failing/11.ru
/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 2 | Cadena no cerrada: " |
"